added routes for sleeping-bags, tents, and backpacks
